# local-mixing

./: .gitignore  Cargo.toml  README.md
benches/: benchmark_evaluate_circuit.rs  benchmark_rainbow_table.rs  benchmark_replacement.rs  benchmark_sample.rs  benchmark_search_degredation.rs  benchmark_wc.rs  sample_circuit_benchmark.rs  sample_unguided_benchmark.rs
experiments/lm-bin/inf-1/: config.json  input.json
experiments/lm-bin/inf-1/logs/: replacement_times.json
experiments/lm-bin/inf-2/logs/: replacement_times.json
experiments/lm-bin/inf-3/: config.json
experiments/lm-bin/inf-3/logs/: replacement_times.json
experiments/lm-bin/knd-1/: config.json
experiments/lm-bin/knd-1/logs/: replacement_fields.json
plot/scripts/: hamming_weight.py  replacement_times.py
scripts/: run.sh  template-config.json
src/: circuit.rs  lib.rs  local_mixing.rs  main.rs  replacement.rs
src/cc/: mod.rs  subgraph.rs
src/circuit/: analysis.rs  cf.rs  circuit.rs  mod.rs
src/compression/: ct.rs  mod.rs  rainbow_table.rs  rt.rs  subgraph.rs
src/local_mixing/: config.rs  consts.rs  job.rs  mod.rs  replacement_stats.rs  search.rs  tracer.rs
src/replacement/: ct.rs  lfsr.rs  mod.rs  permutations.rs  replace_ct.rs  strategy.rs  test.rs
