[package]
name = "local-mixing"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
petgraph = "0.6.5"
itertools = "0.13.0"
num-traits = "0.2.19"
log = "0.4.22"
log4rs = "1.3.0"
either = "1.13.0"
serde = { version = "1.0.213", features = ["derive"] }
rayon = "1.10.0"
bitvec = "1.0.1"
rand_xorshift = "0.3.0"
rand_chacha = "0.3.1"
bincode = "1.3.3"
hex = "0.4.3"
hashbrown = {version="0.15", features = ["rayon"]}
serde_json = "1.0.132"
