[package]
name = "local-mixing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
sha2 = "0.10.8"
petgraph = "0.6.5"
itertools = "0.13.0"
num-traits = "0.2.19"
log = "0.4.22"
env_logger = "0.11.5"
log4rs = "1.3.0"
either = "1.13.0"
serde = { version = "1.0.213", features = ["derive"] }
rayon = "1.10.0"
bitvec = "1.0.1"
rand_xorshift = "0.3.0"
rand_chacha = "0.9.0"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0.132"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark_sample"
harness = false

[[bench]]
name = "benchmark_replacement"
harness = false

[[bench]]
name = "benchmark_search_degredation"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
